# python-backend-postgres

./: .bashrc  Dockerfile  README.md  docker-compose.yml
code/: example.py  init_db.py  main.py  models.py  pyproject.toml
code/api/: city.py  person.py  router.py
code/crud/: city.py  person.py
code/db/: db.py  init.py
code/end/: main.py  models.py
code/models/: city.py  person.py  skill.py
db/: init.sql
models/: base.py  person.py  skill.py
